src/test/ui/dropck/drop-with-active-borrows-1.nll.stderr
error[E0505]: cannot move out of `a` because it is borrowed
  --> $DIR/drop-with-active-borrows-1.rs:14:10
   |
LL |     let b: Vec<&str> = a.lines().collect();
   |                        - borrow of `a` occurs here
LL |     drop(a);    //~ ERROR cannot move out of `a` because it is borrowed
   |          ^ move out of `a` occurs here
LL |     for s in &b {
   |              -- borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0505`.
